src/include/deepstate/Option.h

DEEPSTATE_BEGIN_EXTERN_C

/* Enum for defining command-line groups that options can reside under */
typedef enum {
  InputOutputGroup,
  AnalysisGroup,
  ExecutionGroup,
  TestSelectionGroup,
  MiscGroup,
} DeepState_OptGroup;
/* Backing structure for describing command-line options to DeepState. */
struct DeepState_Option {
  struct DeepState_Option *next;
  const char * const name;
  const char * const alt_name;  /* Only used for booleans. */
  DeepState_OptGroup group;
  void (* const parse)(struct DeepState_Option *);
  void * const value;
  int * const has_value;
  const char * const docstring;
};
extern int DeepState_OptionsAreInitialized;
/* Initialize the options from the command-line arguments. */
void DeepState_InitOptions(int argc, ... /* const char **argv */);
/* Works for `--help` option: print out each options along with
 * their documentation. */
void DeepState_PrintAllOptions(const char *prog_name);
/* Initialize an option. */
void DeepState_AddOption(struct DeepState_Option *option);
/* Parse an option that is a string. */
void DeepState_ParseStringOption(struct DeepState_Option *option);
/* Parse an option that will be interpreted as a boolean value. */
void DeepState_ParseBoolOption(struct DeepState_Option *option);
/* Parse an option that will be interpreted as an integer. */
void DeepState_ParseIntOption(struct DeepState_Option *option);
/* Parse an option that will be interpreted as an unsigned integer. */
void DeepState_ParseUIntOption(struct DeepState_Option *option);