src/include/deepstate/Stream.h

DEEPSTATE_BEGIN_EXTERN_C

/* Clear the contents of the stream and don't log it. */
extern void DeepState_ClearStream(enum DeepState_LogLevel level);
/* Flush the contents of the stream to a log. */
extern void DeepState_LogStream(enum DeepState_LogLevel level);
/* Stream a C string into the stream's message. */
extern void DeepState_StreamCStr(enum DeepState_LogLevel level,
                                 const char *begin);
/* TODO(pag): Implement `DeepState_StreamWCStr` with `wchar_t`. */

/* Stream a some data in the inclusive range `[begin, end]` into the
 * stream's message. */
/*extern void DeepState_StreamData(
    enum DeepState_LogLevel level, const void *begin, const void *end); */

/* Stream some formatted input */
extern void DeepState_StreamFormat(
    enum DeepState_LogLevel level, const char *format, ...);
/* Stream some formatted input */
extern void DeepState_StreamVFormat(
    enum DeepState_LogLevel level, const char *format, va_list args);
/* Reset the formatting in a stream. */
extern void DeepState_StreamResetFormatting(enum DeepState_LogLevel level);